test/preprocessor/pass/undef.osl
#define FOO
#undef FOO

#ifdef FOO
#undef FOO
#endif
