test/preprocessor/fail/macro_redefinition.osl
#define FOO a
#define FOO b
